加入中文语言，使用i18n机制在中文情况下替换字体为中文字体。

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -377,3 +377,7 @@ solution_editing.cancel = Cancel
 tips.tips_category = Tips - %s
 tips.tips = Tips
 tips.ok = OK
+
+# Fonts
+font.arial = Arial
+font.tahoma = Tahoma
