--- a/src/main/resources/i18n/messages_pl.properties
+++ b/src/main/resources/i18n/messages_pl.properties
@@ -377,3 +377,7 @@ solution_editing.cancel = Anuluj
 tips.tips_category = Porady - %s
 tips.tips = Porady
 tips.ok = OK
+
+# Fonts
+font.arial = Arial
+font.tahoma = Tahoma
