--- a/src/main/resources/i18n/messages_pt_BR.properties
+++ b/src/main/resources/i18n/messages_pt_BR.properties
@@ -377,3 +377,7 @@ solution_editing.cancel = Cancelar
 tips.tips_category = Dicas - %s
 tips.tips = Dicas
 tips.ok = OK
+
+# Fonts
+font.arial = Arial
+font.tahoma = Tahoma
