--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -382,3 +382,7 @@ solution_editing.cancel = Cancel
 tips.tips_category = Tips - %s
 tips.tips = Tips
 tips.ok = OK
+
+# Fonts
+font.arial = Arial
+font.tahoma = Tahoma
